Login page and some helpers.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,8 +41,10 @@
         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-        <script src="//use.typekit.net/mdy1nin.js"></script>
+        <script src="//use.typekit.net/qsr0jnc.js"></script>
         <script>try{Typekit.load();}catch(e){}</script>
+
+        <script src="//use.fonticons.com/1518eb00.js"></script>
 
         {% if includeAnalyticsJs %}
             <script>
