--- a/src/web/scss/directives/cp-header.scss
+++ b/src/web/scss/directives/cp-header.scss
@@ -9,9 +9,11 @@ $cp-header-nav-item-horizontal-padding: 10px;
 
 cp-header {
     display: block;
-    max-width: $screen-lg;
     padding: 0 $grid-gutter-width;
     margin: 0 auto;
+    background-color: $body-bg;
+    position: relative;
+    z-index: $zindex-navbar;
 }
 
 .cp-header {
