--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -10,6 +10,7 @@
 @import 'directives/cp-address-form';
 @import 'partials/cp-search';
 @import 'partials/cp-header';
+@import 'partials/cp-login';
 
 /**
  * Misc
