--- a/src/web/scss/admin/general.scss
+++ b/src/web/scss/admin/general.scss
@@ -1,16 +1,18 @@
-.admin-form label {
-    color: #222;
-    font-weight: 700;
-}
+.admin-form {
+    label {
+        color: #222;
+        font-weight: 700;
+    }
 
-.form-control[readonly] {
-    background-color: transparent;
-    border: 0;
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    cursor: auto;
-    height: auto;
-    padding: 0;
+    .form-control[readonly] {
+        background-color: transparent;
+        border: 0;
+        -webkit-box-shadow: none;
+                box-shadow: none;
+        cursor: auto;
+        height: auto;
+        padding: 0;
+    }
 }
 
 .input-group-readonly .input-group-addon {
