--- a/src/web/templates/auth/login-register.html
+++ b/src/web/templates/auth/login-register.html
@@ -1,92 +1,77 @@
-<div class="wrapper">
-    <div class="row">
-        <div class="col-sm-5 col-sm-push-1">
-            <div class="island login">
-                <h2>Log in with a City Pantry account</h2>
+<div class="container">
+    <div class="cp-login">
 
-                <p class="form-error" ng-show="loginError" ng-bind="loginError"></p>
+        <h1 class="cp-login-heading">Log in to your account</h1>
 
-                <form ng-submit="login()" class="login">
-                    <fieldset>
-                        <div class="form-group">
-                            <label for="login_email">Email</label>
-                            <input class="form-control input-lg" id="login_email" name="login_email" type="email" required aria-required="true" ng-model="email" />
+        <p class="cp-form-error" ng-show="loginError" ng-bind="loginError"></p>
+
+        <form class="cp-form cp-login-form" role="form" ng-submit="login()">
+            <fieldset>
+                <div class="cp-form-group">
+                    <label class="cp-form-label" for="login_email">Email</label>
+                    <input class="cp-form-control" id="login_email" name="loginEmail" type="email" required aria-required="true" ng-model="email" />
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-8">
+                        <div class="cp-form-group">
+                            <label class="cp-form-label" for="login_password">Password</label>
+                            <input class="cp-form-control" id="login_password" name="loginPassword" type="password" required aria-required="true" ng-model="plainPassword" />
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            <label for="login_password">Password</label>
-                            <input class="form-control input-lg" id="login_password" name="login_password" type="password" required aria-required="true" ng-model="plainPassword" />
-                        </div>
+                    <div class="col-xs-4">
+                        <input class="cp-btn cp-btn-primary cp-btn-sm cp-btn-block" type="submit" value="Log in" />
+                    </div>
+                </div>
 
-                        <div class="form-group">
-                            <label class="checkbox-inline">
-                                <input name="login_remember" type="checkbox" checked value="true" ng-model="rememberMe" /> Remember me
+                <div class="row">
+                    <div class="col-xs-5">
+                        <div class="cp-checkbox">
+                            <label>
+                                <input name="loginRemember" type="checkbox" checked value="true" ng-model="rememberMe" /> Remember me
                             </label>
                         </div>
+                    </div>
 
-                        <input class="btn btn-primary btn-lg" name="login" type="submit" value="Log in" />
+                    <div class="col-xs-5">
+                        <a class="cp-login-forgot-password" ng-click="isOpen = true">Forgot password?</a>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
 
-                        <a class="btn btn-link btn-lg" id="forgotBtn" ng-click="isOpen = true">Forgot Password?</a>
-                    </fieldset>
-                </form>
-            </div>
-        </div>
-
-        <div class="col-sm-5 col-sm-push-1">
-            <div class="island-alt signup">
-                <h2>New to City Pantry? Sign up!</h2>
-
-                <p class="form-error" ng-show="registerError" ng-bind="registerError"></p>
-
-                <form ng-submit="register()" class="register">
-                    <fieldset>
-                        <div class="form-group">
-                            <label for="signup_name">Name</label>
-                            <input class="form-control input-lg" id="signup_name" name="signup_name" type="text" required aria-required="true" ng-model="name">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="signup_email">Email</label>
-                            <input class="form-control input-lg" id="signup_email" name="signup_email" type="email" required aria-required="true" ng-model="email">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="signup_password">Password</label>
-                            <input class="form-control input-lg" id="signup_password" name="signup_password" type="password" required aria-required="true" ng-model="plainPassword">
-                        </div>
-
-                        <input class="btn btn-primary btn-lg" name="signup" type="submit" value="Sign up">
-
-                        <p class="help-block">By clicking this button you agree to our <a ng-href="{{ hubspotBase }}/terms" target="_blank">Terms and Conditions</a> and <a ng-href="{{ hubspotBase }}/privacy" target="_blank">Privacy Policy</a>.</p>
-                    </fieldset>
-                </form>
-            </div>
-        </div>
+        <a class="cp-btn cp-btn-primary cp-btn-block cp-login-sign-up" href="@todo">New to City Pantry? <span>Sign up</span></a>
     </div>
 </div>
 
-<div class="modal" id="forgotten-password-modal" ng-class="{open: isOpen}">
-    <div class="modal-dialog">
-            <div class="modal-content">
-                <form role="form" ng-submit="forgotPassword()">
-                    <div class="modal-header">
-                        <button class="close" type="button" ng-click="closeDialog()" aria-hidden="true">&times;</button>
-                        <h2 class="modal-title">Reset password</h2>
-                    </div>
+<div class="cp-modal-backdrop" ng-if="isOpen"></div>
 
-                    <div class="modal-body">
-                        <fieldset>
-                            <div class="form-group">
-                                <label for="email">Enter your email address and we&#8217;ll send you a link to reset your password.</label>
-                                <input class="form-control input-lg" id="email" type="email" required placeholder="Email" ng-model="resetEmail" aria-required="true" />
-                            </div>
-                        </fieldset>
-                    </div>
+<div class="cp-modal cp-login-forgot-password-modal" ng-class="{open: isOpen}">
+    <div class="cp-modal-dialog">
+        <div class="cp-modal-content">
+            <div class="cp-modal-header">
+                <button class="close" type="button" ng-click="closeDialog()">
+                    <i class="icon icon-times"></i>
+                </button>
+                <h4 class="cp-modal-title">Reset password</h4>
+            </div>
 
-                    <div class="modal-footer">
-                        <input class="btn btn-primary btn-lg" id="forgotSubmit" type="submit" value="Send reset link">
-                    </div>
+            <div class="cp-modal-body">
+                <p>Enter your email address and we’ll send you a link to reset your password.</p>
+
+                <form class="cp-form" id="reset_password_form" role="form" ng-submit="forgotPassword()">
+                    <fieldset>
+                        <div class="cp-form-group">
+                            <label class="sr-only" for="email">Email</label>
+                            <input class="cp-form-control cp-input-lg" id="email" name="email" type="email" required aria-required="true" ng-model="resetEmail" />
+                        </div>
+                    </fieldset>
                 </form>
             </div>
+            <div class="cp-modal-footer">
+                <button class="cp-btn cp-btn-primary" form="reset_password_form" type="submit">Send reset link</button>
+            </div>
+        </div>
     </div>
 </div>
