--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -11,6 +11,7 @@
 @import 'partials/cp-search';
 @import 'partials/cp-header';
 @import 'partials/cp-login';
+@import 'partials/cp-package';
 
 /**
  * Misc
