--- a/src/web/scss/modules/_cp-bootstrap-variables.scss
+++ b/src/web/scss/modules/_cp-bootstrap-variables.scss
@@ -32,6 +32,7 @@ $btn-primary-border: rgba(0, 0, 0, 0);
 $text-color: $brand-primary;
 
 $link-color: #f15a24;
+$input-color: $brand-primary;
 $input-border-focus: #1985FF;
 $input-border: #2c4c70;
 
