--- a/src/web/templates/customer/addresses.html
+++ b/src/web/templates/customer/addresses.html
@@ -1,8 +1,8 @@
 <div class="wrapper">
-    <h1 class="cp-heading">Delivery addresses</h1>
+    <h2 class="cp-heading">Delivery addresses</h2>
 
     <p>
-        <a href="/customer/addresses/new" role="button" class="btn btn-primary btn-lg">Add a new address</a>
+        <a href="/customer/addresses/new" role="button" class="btn btn-primary">Add a new address</a>
     </p>
 
     <p ng-if="addresses.length === 0">
