--- a/src/web/templates/general/customer-nav-menu-items.html
+++ b/src/web/templates/general/customer-nav-menu-items.html
@@ -1,15 +1,16 @@
 <li><a href="/customer/dashboard">Dashboard</a></li>
 <li class="dropdown" dropdown>
     <a href="#" class="cp-button-my-account" dropdown-toggle role="button" aria-expanded="false">
-        My Account <span class="caret"></span>
+        My account <span class="caret"></span>
     </a>
     <ul class="cp-nav-menu-my-account" role="menu">
-        <li><a href="/customer/account-details">Account Details</a></li>
+        <li><a href="/customer/account-details">Account details</a></li>
         <li><a href="/customer/orders">Orders</a></li>
         <li><a href="/customer/addresses">Addresses</a></li>
         <li><a href="/user/payment-cards">Cards</a></li>
-        <li><a href="/customer/account">My Details</a></li> <!-- @todo - remove? -->
-        <li><a href="/logout">Log Out</a></li>
+        <li><a href="/customer/change-password">Password</a></li>
+        <li><a href="/customer/pay-on-account">Pay on account</a></li>
+        <li><a href="/logout">Log out</a></li>
     </ul>
 </li>
 <li>
