--- a/src/web/templates/user/payment-cards.html
+++ b/src/web/templates/user/payment-cards.html
@@ -1,10 +1,8 @@
-<div class="vendor-signup-header"></div>
-
-<div class="wrapper">
-    <h1>Payment cards</h1>
+<div class="thin-wrapper">
+    <h2 class="cp-heading">Payment cards</h2>
 
     <p>
-        <a href="/user/payment-cards/new" role="button" class="btn btn-primary btn-lg">Add a new card</a>
+        <a href="/user/payment-cards/new" role="button" class="btn btn-primary">Add a new card</a>
     </p>
 
     <p ng-if="cards.length === 0">
