--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -987,6 +987,13 @@
     text-decoration: underline;
 }
 
+hr {
+    height: 3px;
+    color: #eee;
+    background-color: #eee;
+    clear: both;
+}
+
 @import 'directives/cp-package-card.scss';
 @import 'admin/general.scss';
 @import 'customer/account-details.scss';
