--- a/src/web/scss/partials/_cp-search.scss
+++ b/src/web/scss/partials/_cp-search.scss
@@ -44,6 +44,7 @@
     @extend .input;
     text-transform: uppercase;
     border: 2px solid $brand-primary;
+    color: $input-color;
 
     &:focus {
         -webkit-appearance: none !important;
@@ -53,19 +54,19 @@
     }
 
     &::-webkit-input-placeholder {
-       color: #ccc;
+       color: $gray;
     }
 
     &:-moz-placeholder {
-       color: #ccc;
+       color: $gray;
     }
 
     &::-moz-placeholder {
-       color: #ccc;
+       color: $gray;
     }
 
     &:-ms-input-placeholder {
-       color: #ccc;
+       color: $gray;
     }
 }
 
@@ -176,7 +177,7 @@
    position: relative;
    overflow: hidden;
    padding-bottom: 100%;
-   background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPScxMCcgaGVpZ2h0PScxMCc+CiAgPHJlY3Qgd2lkdGg9JzEwJyBoZWlnaHQ9JzEwJyBmaWxsPScjZmZmJyAvPgogIDxjaXJjbGUgY3g9IjEiIGN5PSIxIiByPSIxIiBmaWxsPSIjMDAwIi8+Cjwvc3ZnPg=="); 
+   background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPScxMCcgaGVpZ2h0PScxMCc+CiAgPHJlY3Qgd2lkdGg9JzEwJyBoZWlnaHQ9JzEwJyBmaWxsPScjZmZmJyAvPgogIDxjaXJjbGUgY3g9IjEiIGN5PSIxIiByPSIxIiBmaWxsPSIjMDAwIi8+Cjwvc3ZnPg==");
    background-repeat: repeat;
 
    img {
