--- a/src/web/templates/auth/reset-password.html
+++ b/src/web/templates/auth/reset-password.html
@@ -1,25 +1,21 @@
-<div class="vendor-signup-header"></div>
+<div class="thin-wrapper">
+    <h2 class="cp-heading">Reset password</h2>
 
-<div class="wrapper">
-    <div class="row">
-        <div class="col-sm-8">
-            <h1>Reset password</h1>
+    <form role="form" ng-submit="reset()">
+        <fieldset>
+            <div class="form-group">
+                <label for="new">New Password</label>
+                <input class="form-control" ng-model="newPassword" id="new" name="new" type="password"
+                    required aria-required="true">
+            </div>
 
-            <form role="form" ng-submit="reset()">
-                <fieldset>
-                    <div class="form-group">
-                        <label for="new">New Password</label>
-                        <input class="form-control input-lg" ng-model="newPassword" id="new" name="new" type="password" required="" aria-required="true">
-                    </div>
+            <div class="form-group">
+                <label for="confirm">Confirm Password</label>
+                <input class="form-control" ng-model="confirmPassword" id="confirm" name="confirm" type="password"
+                    required aria-required="true">
+            </div>
 
-                    <div class="form-group">
-                        <label for="confirm">Confirm Password</label>
-                        <input class="form-control input-lg" ng-model="confirmPassword" id="confirm" name="confirm" type="password" required="" aria-required="true">
-                    </div>
-
-                    <input class="btn btn-primary btn-lg" type="submit" value="Reset">
-                </fieldset>
-            </form>
-        </div>
-    </div>
+            <input class="btn btn-primary" type="submit" value="Reset">
+        </fieldset>
+    </form>
 </div>
