--- a/src/web/templates/customer/change-password.html
+++ b/src/web/templates/customer/change-password.html
@@ -1,34 +1,27 @@
-<div class="vendor-signup-header"></div>
+<div class="thin-wrapper">
+    <h2 class="cp-heading">Password</h2>
 
-<div class="wrapper">
-    <div class="row">
-        <div class="col-sm-8">
-            <h1>My details</h1>
+    <form role="form" ng-submit="save()">
+        <fieldset>
+            <div class="form-group">
+                <label for="current">Current password</label>
+                <input class="form-control" ng-model="currentPassword" id="current" name="current" type="password"
+                    required aria-required="true" />
+            </div>
 
-            <h2>Password</h2>
+            <div class="form-group">
+                <label for="new">New password</label>
+                <input class="form-control" ng-model="newPassword" id="new" name="new" type="password"
+                    required aria-required="true" />
+            </div>
 
-            <form role="form" ng-submit="save()">
-                <fieldset>
-                    <div class="form-group">
-                        <label for="current">Current Password</label>
-                        <input class="form-control input-lg" ng-model="currentPassword" id="current" name="current" type="password" required="" aria-required="true">
-                    </div>
+            <div class="form-group">
+                <label for="confirm">Confirm password</label>
+                <input class="form-control" ng-model="confirmPassword" id="confirm" name="confirm" type="password"
+                    required aria-required="true" />
+            </div>
 
-                    <div class="form-group">
-                        <label for="new">New Password</label>
-                        <input class="form-control input-lg" ng-model="newPassword" id="new" name="new" type="password" required="" aria-required="true">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="confirm">Confirm Password</label>
-                        <input class="form-control input-lg" ng-model="confirmPassword" id="confirm" name="confirm" type="password" required="" aria-required="true">
-                    </div>
-
-                    <input class="btn btn-primary btn-lg" type="submit" value="Save changes">
-                </fieldset>
-            </form>
-        </div>
-
-        <ng-include src="'/dist/templates/customer/sidebar.html'" ng-init="page = 'changePassword'"></ng-include>
-    </div>
+            <input class="btn btn-primary" type="submit" value="Save changes" />
+        </fieldset>
+    </form>
 </div>
