--- a/src/web/templates/directives/cp-address-form-for-customer.html
+++ b/src/web/templates/directives/cp-address-form-for-customer.html
@@ -6,7 +6,7 @@
             {{ isNew ? 'Save address as...' : 'Saved location' }}
         </label>
 
-        <input class="form-control input-lg" id="address_label" name="addressLabel"
+        <input class="form-control" id="address_label" name="addressLabel"
             ng-model="address.label" size="30" />
     </div>
 
@@ -18,7 +18,7 @@
             <span class="form-element-invalid" ng-show="form.$submitted && form.companyName.$error.required">(Company's name is required.)</span>
         </label>
 
-        <input class="form-control input-lg" id="company_name" name="companyName"
+        <input class="form-control" id="company_name" name="companyName"
             required aria-required="true"
             ng-model="address.companyName" size="30" />
     </div>
@@ -29,7 +29,7 @@
             <span class="form-element-invalid" ng-show="form.$submitted && form.addressLine1.$error.required">(Address line 1 is required.)</span>
         </label>
 
-        <input class="form-control input-lg" id="address_line1" name="addressLine1"
+        <input class="form-control" id="address_line1" name="addressLine1"
             required aria-required="true"
             ng-model="address.addressLine1" size="50" />
     </div>
@@ -37,14 +37,14 @@
     <div class="form-group">
         <label for="address_line2">Address line 2</label>
 
-        <input class="form-control input-lg" id="address_line2" name="addressLine2"
+        <input class="form-control" id="address_line2" name="addressLine2"
             ng-model="address.addressLine2" size="50" />
     </div>
 
     <div class="form-group">
         <label for="address_line3">Address line 3</label>
 
-        <input class="form-control input-lg" id="address_line3" name="addressLine3"
+        <input class="form-control" id="address_line3" name="addressLine3"
             ng-model="address.addressLine3" size="50" />
     </div>
 
@@ -54,7 +54,7 @@
             <span class="form-element-invalid" ng-show="form.$submitted && form.city.$error.required">(City is required.)</span>
         </label>
 
-        <input class="form-control input-lg" id="city" name="city" required aria-required="true"
+        <input class="form-control" id="city" name="city" required aria-required="true"
             ng-model="address.city" size="20" />
     </div>
 
@@ -65,7 +65,7 @@
             <span class="form-element-invalid" ng-show="form.$submitted && form.postcode.$error.pattern">(Postcode is invalid.)</span>
         </label>
 
-        <input class="form-control input-lg" id="postcode" name="postcode" size="10"
+        <input class="form-control" id="postcode" name="postcode" size="10"
             required aria-required="true"
             ng-model="address.postcode"
             ng-pattern="/[a-zA-Z]{1,2}[0-9][0-9A-Za-z]?\s?[0-9][a-zA-Z]{2}/" />
@@ -79,7 +79,7 @@
             <span class="form-element-invalid" ng-show="form.$submitted && form.officeManagerName.$error.required">(Office manager's name is required.)</span>
         </label>
 
-        <input class="form-control input-lg" id="office_manager_name" name="officeManagerName"
+        <input class="form-control" id="office_manager_name" name="officeManagerName"
             required aria-required="true" size="30"
             ng-model="address.officeManagerName" />
     </div>
@@ -90,7 +90,7 @@
             <span class="form-element-invalid" ng-show="form.$submitted && form.LandlineNumber.$error.required">(Landline number is required.)</span>
         </label>
 
-        <input class="form-control input-lg" id="landline_number" name="landlineNumber" type="tel"
+        <input class="form-control" id="landline_number" name="landlineNumber" type="tel"
             required aria-required="true" size="30"
             ng-model="address.landlineNumber" />
     </div>
@@ -102,7 +102,7 @@
     <div class="form-group">
         <p>Do you have any instructions for the delivery driver's arrival?</p>
 
-        <textarea class="form-control input-lg" name="deliveryInstruction" ng-model="address.deliveryInstruction"></textarea>
+        <textarea class="form-control" name="deliveryInstruction" ng-model="address.deliveryInstruction"></textarea>
     </div>
 
     <h2 class="cp-heading">Parking</h2>
@@ -110,7 +110,7 @@
     <div class="form-group">
         <p>Can you recommend anywhere to park nearby?</p>
 
-        <textarea class="form-control input-lg" name="parkingSuggestion" ng-model="address.parkingSuggestion"></textarea>
+        <textarea class="form-control" name="parkingSuggestion" ng-model="address.parkingSuggestion"></textarea>
     </div>
 
     <hr />
