--- a/src/web/templates/directives/cp-address-form-for-vendor.html
+++ b/src/web/templates/directives/cp-address-form-for-vendor.html
@@ -6,7 +6,7 @@
             {{ isNew ? 'Save address as...' : 'Saved location' }}
         </label>
 
-        <input class="form-control input-lg" id="address_label" name="addressLabel"
+        <input class="form-control" id="address_label" name="addressLabel"
             ng-model="address.label" size="30" />
     </div>
 
@@ -18,7 +18,7 @@
             <span class="form-element-invalid" ng-show="form.$submitted && form.addressLine1.$error.required">(Address line 1 is required.)</span>
         </label>
 
-        <input class="form-control input-lg" id="address_line1" name="addressLine1"
+        <input class="form-control" id="address_line1" name="addressLine1"
             required aria-required="true"
             ng-model="address.addressLine1" size="50" />
     </div>
@@ -26,14 +26,14 @@
     <div class="form-group">
         <label for="address_line2">Address line 2</label>
 
-        <input class="form-control input-lg" id="address_line2" name="addressLine2"
+        <input class="form-control" id="address_line2" name="addressLine2"
             ng-model="address.addressLine2" size="50" />
     </div>
 
     <div class="form-group">
         <label for="address_line3">Address line 3</label>
 
-        <input class="form-control input-lg" id="address_line3" name="addressLine3"
+        <input class="form-control" id="address_line3" name="addressLine3"
             ng-model="address.addressLine3" size="50" />
     </div>
 
@@ -43,7 +43,7 @@
             <span class="form-element-invalid" ng-show="form.$submitted && form.city.$error.required">(City is required.)</span>
         </label>
 
-        <input class="form-control input-lg" id="city" name="city" required aria-required="true"
+        <input class="form-control" id="city" name="city" required aria-required="true"
             ng-model="address.city" size="20" />
     </div>
 
@@ -54,7 +54,7 @@
             <span class="form-element-invalid" ng-show="form.$submitted && form.postcode.$error.pattern">(Postcode is invalid.)</span>
         </label>
 
-        <input class="form-control input-lg" id="postcode" name="postcode" size="10"
+        <input class="form-control" id="postcode" name="postcode" size="10"
             required aria-required="true"
             ng-model="address.postcode"
             ng-pattern="/[a-zA-Z]{1,2}[0-9][0-9A-Za-z]?\s?[0-9][a-zA-Z]{2}/" />
@@ -68,7 +68,7 @@
             <span class="form-element-invalid" ng-show="form.$submitted && form.contactName.$error.required">(Contact name is required.)</span>
         </label>
 
-        <input class="form-control input-lg" id="contact_name" name="contactName" required aria-required="true" ng-model="address.contactName" />
+        <input class="form-control" id="contact_name" name="contactName" required aria-required="true" ng-model="address.contactName" />
     </div>
 
     <div class="form-group">
@@ -77,7 +77,7 @@
             <span class="form-element-invalid" ng-show="form.$submitted && form.LandlineNumber.$error.required">(Landline number is required.)</span>
         </label>
 
-        <input class="form-control input-lg" id="landline_number" name="landlineNumber" type="tel" required aria-required="true" ng-model="address.landlineNumber" />
+        <input class="form-control" id="landline_number" name="landlineNumber" type="tel" required aria-required="true" ng-model="address.landlineNumber" />
     </div>
 
     <div class="form-group">
@@ -87,7 +87,7 @@
             <span class="form-element-invalid" ng-show="form.$submitted && form.orderNotificationMobileNumber.$error.pattern">(Order notification mobile number is invalid.)</span>
         </label>
 
-        <input class="form-control input-lg" id="order_notification_mobile_number" name="orderNotificationMobileNumber" type="tel" required aria-required="true" ng-model="address.orderNotificationMobileNumber" ng-pattern="/^(\+44\s?7\d{3}|\(?07\d{3}\)?)\s?\d{3}\s?\d{3}$/" />
+        <input class="form-control" id="order_notification_mobile_number" name="orderNotificationMobileNumber" type="tel" required aria-required="true" ng-model="address.orderNotificationMobileNumber" ng-pattern="/^(\+44\s?7\d{3}|\(?07\d{3}\)?)\s?\d{3}\s?\d{3}$/" />
     </div>
 
     <hr />
