--- a/src/web/templates/general/vendor-nav-menu-items.html
+++ b/src/web/templates/general/vendor-nav-menu-items.html
@@ -2,16 +2,16 @@
 <li><a href="/vendor/addresses">Addresses</a></li>
 <li><a href="/vendor/profile">Profile</a></li>
 <li><a href="/vendor/packages">Packages</a></li>
-<li><a href="/vendor/create-package">Create Package</a></li>
+<li><a href="/vendor/create-package">Create package</a></li>
 <li class="dropdown" dropdown>
     <a href="#" class="cp-button-my-account" dropdown-toggle role="button" aria-expanded="false">
-        My Account <span class="caret"></span>
+        My account <span class="caret"></span>
     </a>
     <ul class="cp-nav-menu-my-account" role="menu">
-        <li><a href="/vendor/delivery-radiuses">Delivery Radiuses</a></li>
-        <li><a href="{{ hubspotBase }}/agreement">Supplier Agreement</a></li>
-        <li><a href="/customer/account">My Details</a></li>
-        <li><a href="/logout">Log Out</a></li>
+        <li><a href="/vendor/delivery-radiuses">Delivery radiuses</a></li>
+        <li><a href="{{ hubspotBase }}/agreement">Supplier agreement</a></li>
+        <li><a href="/customer/change-password">Password</a></li>
+        <li><a href="/logout">Log out</a></li>
     </ul>
 </li>
 <li>
