View package: code cosmetics.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -17,6 +17,10 @@
  * Misc
  */
 
+body {
+    quotes: '\201c' '\201d';
+}
+
 .form-inline-xs .form-group {
     display: inline-block;
     margin-bottom: 0;
