--- a/src/web/templates/general/view-package.html
+++ b/src/web/templates/general/view-package.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="cp-package">
         <article class="cp-package-main">
-            <carousel class="cp-package-carousel" interval="myInterval">
+            <carousel class="cp-package-carousel">
                 <slide ng-repeat="image in package.images" active="slide.active">
                     <img ng-src="{{ image.medium }}" />
                 </slide>
