--- a/src/web/scss/directives/cp-header.scss
+++ b/src/web/scss/directives/cp-header.scss
@@ -12,6 +12,7 @@ cp-header {
     background-color: $body-bg;
     position: relative;
     z-index: $zindex-navbar;
+    border-bottom: 2px solid #cfcfcf;
 }
 
 .cp-header {
