--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -13,6 +13,7 @@
 @import 'partials/cp-login';
 @import 'partials/cp-package';
 @import 'partials/cp-tables';
+@import 'partials/cp-dashboard';
 
 /**
  * Misc
