--- a/src/web/scss/partials/_cp-buttons.scss
+++ b/src/web/scss/partials/_cp-buttons.scss
@@ -2,11 +2,35 @@
     @extend .btn;
     height: $input-height-large;
 }
+a.cp-btn {
+    line-height: $input-height-large - ($padding-base-vertical * 2);
+}
+
+.cp-btn-default {
+    @extend .btn-default;
+    @include cp-font-title($font-size-large);
+    background-color: $cp-primary-color;
+    border: 0;
+    color: #fff;
+
+    &:hover,
+    &:focus,
+    &:active {
+        background-color: darken($cp-primary-color, 10%);
+        color: #fff;
+    }
+}
 
 .cp-btn-primary {
     @extend .btn-primary;
     @include cp-font-title($font-size-large);
     background-color: $cp-secondary-color;
+
+    &:hover,
+    &:focus,
+    &:active {
+        background-color: darken($cp-secondary-color, 10%);
+    }
 }
 
 .cp-btn-link {
@@ -25,6 +49,9 @@
     @extend .btn-lg;
     font-size: 24px;
     height: 66px;
+}
+a.cp-btn-lg {
+    line-height: 66px - ($padding-large-vertical * 2);
 }
 
 .cp-btn-sm {
