--- a/src/web/scss/partials/_cp-forms.scss
+++ b/src/web/scss/partials/_cp-forms.scss
@@ -45,3 +45,12 @@
     color: $state-danger-text;
     font-size: $font-size-h4;
 }
+
+.cp-form-separator {
+    font-size: $font-size-large;
+    font-weight: 600;
+    position: relative;
+    top: 30px;
+    left: -3px;
+    text-transform: uppercase;
+}
