--- a/src/web/templates/general/view-package.html
+++ b/src/web/templates/general/view-package.html
@@ -16,47 +16,7 @@
                 <span>per head</span>
             </span>
 
-            <ul class="cp-package-rating-inline">
-                <li>
-                    <span class="cp-package-rating-inline-attribute">Quality</span>
-                    <div class="cp-package-rating-inline-rating">
-                        <i class="icon icon-star"></i>
-                        <i class="icon icon-star"></i>
-                        <i class="icon icon-star"></i>
-                        <i class="icon icon-star"></i>
-                        <i class="icon icon-star-half-o"></i>
-                        <span class="sr-only"><span>4.5</span>/5</span>
-                    </div>
-                </li>
-                <li>
-                    <span class="cp-package-rating-inline-attribute">Value</span>
-                    <div class="cp-package-rating-inline-rating">
-                        <i class="icon icon-star"></i>
-                        <i class="icon icon-star"></i>
-                        <i class="icon icon-star"></i>
-                        <i class="icon icon-star-o"></i>
-                        <i class="icon icon-star-o"></i>
-                        <span class="sr-only"><span>3</span>/5</span>
-                    </div>
-                </li>
-                <li>
-                    <span class="cp-package-rating-inline-attribute">Presentation</span>
-                    <div class="cp-package-rating-inline-rating">
-                        <i class="icon icon-star"></i>
-                        <i class="icon icon-star"></i>
-                        <i class="icon icon-star"></i>
-                        <i class="icon icon-star"></i>
-                        <i class="icon icon-star-o"></i>
-                        <span class="sr-only"><span>4</span>/5</span>
-                    </div>
-                </li>
-                <li>
-                    <span class="cp-package-rating-inline-attribute">On time</span>
-                    <div class="cp-package-rating-inline-rating">
-                        80%
-                    </div>
-                </li>
-            </ul>
+            <cp-package-rating></cp-package-rating>
 
             <p class="cp-package-description">{{ package.description }}</p>
 
