--- a/src/web/templates/customer/dashboard.html
+++ b/src/web/templates/customer/dashboard.html
@@ -75,7 +75,7 @@
 
                 <!-- @todo - cp-package-card -->
 
-                <p class="cp-dashboard-order-description">{{ nextOrder.package.description | words:20 }}</p>
+                <p class="cp-dashboard-order-description">{{ nextOrder.package.description }}</p>
 
                 <section class="cp-dashboard-order-detail">
                     <h3 class="cp-dashboard-order-detail-heading">Your order</h3>
