--- a/src/web/templates/customer/dashboard.html
+++ b/src/web/templates/customer/dashboard.html
@@ -70,7 +70,7 @@
             <aside class="cp-dashboard-order" ng-if="nextOrder">
                 <header>
                     <h2 class="cp-dashboard-order-heading">Next order</h2>
-                    <span class="cp-dashboard-order-date">{{ nextOrder.requestedDeliveryDate | date:'dd/MM/yy' }}</span>
+                    <span class="cp-dashboard-order-date">{{ nextOrder.requestedDeliveryDate | date:'dd MMM yy' }}</span>
                 </header>
 
                 <!-- @todo - cp-package-card -->
